2001-05-27  Elliot Glaysher  <nuriko.chan@home.com>

	* comicpage.glade: Initial commit of the glade file used to generate
	the comicpage interface.
	
2001-05-25  Elliot Glaysher  <nuriko.chan@home.com>

	* debian/.cvsignore: Created so I don't get all those ? <filename>
	errors regarding debian's temporary build files.
	
2001-05-24  Elliot Glaysher  <nuriko.chan@home.com>

	* comicpage (comic_selected_from_list): Now when clicked, downloads
	today's comic for that comic.
	(Display_comic): Commented code and added whitespace. If they suck let
	me know (It's past midnight and I'm tired...)
	(comic_selected_from_list): A one line fix to quite an annoying bug...
	
2001-05-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (BUNDLERULES): Abstracted redundant code for creating
	the distribution tarballs.  Changed to remove CVS subdirs.
	(CONTRIB): Added a list of files in contrib to the ALLFILES macro.
	(DEBFILES): Updated to reflect changes made to the debian dir.
	(NOSUBPOD2MANRULES): Fixed creation of Netcomics::Config manpage
	by having %.3 files generated using this new macro.

2001-05-22  Elliot Glaysher  <nuriko.chan@home.com>

	* debian/netcomics.files: Explicitly declare /usr/lib/perl5/Netcomics*
	for pkging.
	* debian/netcomics.manpages, Makefile, debian/rules: Put the to be
	installed manpages in the normal place instead of making it more
	complicated. Install the Netcomics::Config.3 manpage.
	
2001-05-21  Elliot Glaysher  <nuriko.chan@home.com>

	* debian/docs -> debian/netcomics.docs: Moved file so documentation
	is placed in the netcomics pkg. explicitly.
	* debian/dirs: Removed because it's redundant.
	* debian/netcomics.manpages: Added entry for the comicpage manpage.
	That means one less error from lintian...

2001-05-21  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics.spec (%files): Added /usr/lib/perl5 files & comicpage 
	manpage.
	* doc/.cvsignore: Fixed so that it wasn't ignoring controlled